# ai-engineering

./: .gitignore
hw/hw1/: hw1.md
hw/hw10/: .env.example  .gitignore  PLAN.md  README.md  REPORT.md  docker-compose.yml  education.md  pyproject.toml
hw/hw10/app/: auth.py  cache.py  config.py  cost_tracker.py  embedder.py  llm_router.py  main.py  mock_llm.py  observability.py  pricing.py  prompts.py  rate_limit.py  redis_client.py  retriever.py  security.py  sse.py  vector_db.py
hw/hw10/data/: source.md
hw/hw10/scripts/: demo_stream.py  fetch_source.py  index.py  query.py  run_all_demos.py  test_fallback.py  test_retrieval.py
hw/hw10/static/: index.html
hw/hw2/: plan.md
hw/hw2/dvc-homework/: README.md  evaluate.py  requirements.txt
hw/hw2/homework/: README.md  evaluate.py  homework.ipynb  requirements.txt
hw/hw2/report/: report.md
hw/hw4/: .gitignore  credit_approval_demo.py  mlflow_registry_demo.py  mlflow_tracking_demo.py  pyproject.toml  sklearn_overview_demo.py  three_learning_types_demo.py
hw/hw4/ai-learning-assistant/: app.py  requirements.txt
hw/hw4/ai-learning-assistant/src/agent/: graph.py  nodes.py  prompts.py  state.py
hw/hw4/ai-learning-assistant/src/models/: concept.py
hw/hw4/ai-learning-assistant/src/ui/: graph_view.py  sidebar.py
hw/hw4/credit-scoring-demo/: requirements.txt  run_pipeline.py
hw/hw4/credit-scoring-demo/app/: main.py
hw/hw4/credit-scoring-demo/app/templates/: index.html
hw/hw4/credit-scoring-demo/src/: config.py  data.py  evaluate.py  features.py  predict.py  registry.py  train.py
hw/hw5/: PLAN.md  REPORT.md  gpt_visualizer.html
hw/hw5/homework/: bench.py  nano_gpt.py  run_step_1_1.py  run_step_1_2.py  run_step_1_3.py  server.py  (+2 more)
hw/hw6/: .env.example  .gitignore  ANALYSIS.md  README.md  eval.py  eval_results.csv  extraction_agent.py  pyproject.toml
hw/hw6/results/: chaotic_standup_ollama.json  chaotic_standup_openai.json  simple_meeting_ollama.json  simple_meeting_openai.json  technical_sync_ollama.json  technical_sync_openai.json
hw/hw6/samples/: _gold.json  chaotic_standup.txt  simple_meeting.txt  technical_sync.txt
hw/hw8/: .env.example  .gitignore  README.md  docker-compose.yml  education.md  requirements.txt
hw/hw9/: .gitignore  README.md  REPORT.md  education.md  requirements.txt
(+791 files in other folders)
