[project]
name = "hw10-rag-api"
version = "0.1.0"
description = "Production-ready RAG API: streaming, semantic cache, rate limit, cost tracking, fallback"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    # LLM (OpenRouter використовує OpenAI-сумісний SDK)
    "openai>=1.54",
    # Embeddings + chunking
    "sentence-transformers>=3.3",
    "langchain-text-splitters>=0.3",
    "tiktoken>=0.8",
    "pypdf>=5.1",
    # Vector DB + cache
    "qdrant-client>=1.12",
    # Redis (rate limit + counters)
    "redis>=5.2",
    # Cost tracking
    "aiosqlite>=0.20",
    # Observability
    "langfuse>=2.55",
    # Misc
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
