[project]
name = "hw6-llm-engineering"
version = "0.1.0"
description = "HW6 — LLM Engineering: API (OpenAI) vs Self-hosted (Ollama) extraction agent"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.50.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "pandas>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]